--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,10 +1,16 @@
 .header {
   width: 100%;
-  padding: 4vw 4vw;
+  padding: 1.5rem 1.5rem;
   background-color: #f2f0ec;
   box-sizing: border-box;
   position: relative;
   z-index: 100;
+}
+
+@media (min-width: 1025px) {
+  .header {
+    padding: 2rem 4vw;
+  }
 }
 
 .header-inner {
