--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,11 @@ body {
   min-width: 320px;
   min-height: 100vh;
   background-color: var(--theme-khaki);
+  overflow-x: hidden;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 #root {
